@@ -11,7 +11,8 @@ namespace Caliburn.Core.Threading
         /// Queues the user work item.
         /// </summary>
         /// <param name="callback">The work callback.</param>
+        /// <param name="userState">The user state.</param>
         /// <returns></returns>
-        bool QueueUserWorkItem(WaitCallback callback);
+        bool QueueUserWorkItem(WaitCallback callback, object userState);
     }
 }
