@@ -5,6 +5,8 @@ V2 Alpha
 -Updated StructureMap to trunk version
 -Re-designed entire module and configuration mechanism.  Reworked feature modules and updated unit tests.  Fixed all samples.
 -Moved SafeToString to the PresentationFramework assembly and made it internal so that it would stop showing up on all objects.
+-Some refactoring/renaming to IMetadataContainer.
+-Redesign of IThreadPool.  AsynchronousAction will now pass itself as state when enqueing the background task.
 
 V1 RTW
 -The DefaultBinder will now throw on type activation failure.
